--- a/packages/autorio/package.json
+++ b/packages/autorio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "autorio.ts",
   "version": "0.1.0",
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.0.0",
   "description": "An automation mod for Factorio written in TypeScript.",
   "author": "LemonNekoGH",
   "license": "MIT",
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "tstl",
-    "dev": "tstl --watch"
+    "dev": "mkdir -p dist && cp -r info.json dist && tstl --watch"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.14.0",
