chore: added CI/CD checks, bump dependencies

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,9 +3,17 @@ ignorePaths: []
 dictionaryDefinitions: []
 dictionaries: []
 words:
-  - "AUTORIO"
-  - "Factorio"
-  - LemonNekoGH
+  - AUTORIO
+  - dotenvx
+  - Factorio
+  - guiiai
   - LemonNeko
+  - LemonNekoGH
+  - logg
+  - moeru
+  - neuri
+  - rcon
+  - tstl
+  - xsai
 ignoreWords: []
 import: []
