upgrade pnpm in docker file

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,5 +4,4 @@ FROM --platform=linux/amd64 factoriotools/factorio:2.0.30
 # install nodejs
 RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
 RUN apt-get update && apt-get install -y nodejs git file
-RUN corepack enable
-RUN corepack prepare pnpm@10.0.0 --activate
+RUN npm install -g pnpm@10.1.0
