chore: better devcontainer

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,9 +3,11 @@ ignorePaths: []
 dictionaryDefinitions: []
 dictionaries: []
 words:
+  - antfu
   - AUTORIO
   - dotenvx
   - Factorio
+  - factoriotools
   - guiiai
   - LemonNeko
   - LemonNekoGH
