--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -16,7 +16,8 @@
     "build": "unbuild",
     "dev": "dotenvx run -f .env -f .env.local --overload --debug -- tsx src/main.ts",
     "start": "dotenvx run -f .env -f .env.local --overload -- tsx src/main.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.34.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^22.13.0",
     "tsx": "^4.19.2",
-    "unbuild": "^3.3.1"
+    "unbuild": "^3.3.1",
+    "vitest": "^3.0.4"
   }
 }
