feat: multiple services in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 {
   "name": "airi-factorio",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
-  "runArgs": ["--network=host"],
+  "dockerComposeFile": ["./docker-compose.yml"],
+  "service": "airi-factorio",
+  "shutdownAction": "none",
+  "workspaceFolder": "/workspace/",
   "customizations": {
     "vscode": {
       "extensions": [
