--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,8 @@
     "dbaeumer.vscode-eslint",
     "yzhang.markdown-all-in-one",
     "vitest.explorer",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    "sumneko.lua",
+    "yinfei.luahelper"
   ]
 }
