researched reload for multi-file mod

--- a/packages/tstl-plugin-reload-factorio-mod/example/tsconfig.json
+++ b/packages/tstl-plugin-reload-factorio-mod/example/tsconfig.json
@@ -17,6 +17,10 @@
       { "name": "../dist/index.js" }
     ],
     "luaLibImport": "inline",
-    "buildMode": "default"
-  }
+    "luaBundle": "control.lua",
+    "luaBundleEntry": "./control.ts"
+  },
+  "include": [
+    "**/*.ts"
+  ]
 }
