--- a/packages/autorio/package.json
+++ b/packages/autorio/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.1.1",
+    "@proj-airi/tstl-plugin-reload-factorio-mod": "workspace:*",
     "eslint": "^9.19.0",
     "lua-types": "^2.13.1",
     "typed-factorio": "^3.13.1",
