refactor: apply hot reload to autorio.ts (#11)
* researched reload for multi-file mod

* apply hot reload to autorio.ts

* build before typecheck

--- a/packages/tstl-plugin-reload-factorio-mod/example/tsconfig.json
+++ b/packages/tstl-plugin-reload-factorio-mod/example/tsconfig.json
@@ -14,9 +14,13 @@
   "tstl": {
     "luaTarget": "JIT",
     "luaPlugins": [
-      { "name": "../dist/index.js" }
+      { "name": "../dist/index.mjs" }
     ],
     "luaLibImport": "inline",
-    "buildMode": "default"
-  }
+    "luaBundle": "control.lua",
+    "luaBundleEntry": "./control.ts"
+  },
+  "include": [
+    "**/*.ts"
+  ]
 }
