--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -2,7 +2,7 @@
   "name": "@proj-airi/factorio-agent",
   "type": "module",
   "version": "0.1.0",
-  "packageManager": "pnpm@10.1.0",
+  "packageManager": "pnpm@10.4.0",
   "description": "An agent for Factorio written in TypeScript.",
   "author": "LemonNekoGH",
   "license": "MIT",
@@ -20,20 +20,20 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.34.0",
+    "@dotenvx/dotenvx": "^1.36.0",
     "@guiiai/logg": "^1.0.7",
-    "@xsai/generate-text": "^0.0.31",
-    "@xsai/providers": "^0.0.31",
+    "@xsai/generate-text": "^0.1.0-beta.5",
+    "@xsai/providers": "^0.1.0-beta.5",
     "execa": "^9.5.2",
     "factorio-rcon-api-client": "^2.0.4",
-    "neuri": "^0.0.21",
-    "zod": "^3.24.1",
+    "neuri": "^0.0.22",
+    "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.13.4",
     "tsx": "^4.19.2",
     "unbuild": "^3.3.1",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.5"
   }
 }
