--- a/packages/agent/.env.example
+++ b/packages/agent/.env.example
@@ -2,9 +2,7 @@ OPENAI_API_KEY=''
 OPENAI_API_BASEURL=''
 
 RCON_API_SERVER_PORT=24180
-RCON_API_SERVER_HOST='localhost'
+RCON_API_SERVER_HOST=''
 
-FACTORIO_PATH=''
-FACTORIO_SAVE_PATH=''
-FACTORIO_RCON_PASSWORD=''
-FACTORIO_RCON_PORT=27015
+FACTORIO_WS_PORT=8080
+FACTORIO_WS_HOST=''
