--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: ghcr.io/nekomeowww/factorio-rcon-api:2.0.5
     network_mode: host
     environment:
-      FACTORIO_RCON_HOST: host.docker.internal
+      FACTORIO_RCON_HOST: localhost
       FACTORIO_RCON_PORT: 27015
       FACTORIO_RCON_PASSWORD: 123456
+    restart: always
