--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,6 +12,9 @@ RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
 RUN apt-get update && apt-get install -y nodejs git file curl ca-certificates
 RUN corepack enable
 
+# install debug tools
+RUN apt-get install -y lsof net-tools iproute2 telnet procps
+
 # install pnpm
 RUN export NPM_PKG_SHA_PNPM=$(npm view pnpm@$PNPM_VERSION dist.shasum) && \
     corepack prepare pnpm@$PNPM_VERSION+sha1.$NPM_PKG_SHA_PNPM --activate
