--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "dotenvx run -f .env -f .env.local --overload --debug -- tsx src/main.ts",
+    "dev": "vite-node src/main.ts",
     "start": "dotenvx run -f .env -f .env.local --overload -- tsx src/main.ts",
     "typecheck": "tsc --noEmit",
     "test": "vitest"
@@ -35,6 +35,8 @@
     "@types/node": "^22.13.4",
     "tsx": "^4.19.2",
     "unbuild": "^3.3.1",
+    "vite": "^6.1.0",
+    "vite-node": "^3.0.5",
     "vitest": "^3.0.5"
   }
 }
