--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -25,6 +25,7 @@
     "@xsai/generate-text": "^0.1.0-beta.5",
     "@xsai/providers": "^0.1.0-beta.5",
     "execa": "^9.5.2",
+    "exponential-backoff": "^3.1.2",
     "factorio-rcon-api-client": "^2.0.4",
     "it-ws": "^6.1.5",
     "neuri": "^0.0.22",
