--- a/package.json
+++ b/package.json
@@ -28,9 +28,16 @@
     "@antfu/eslint-config": "^4.2.0",
     "@antfu/ni": "^23.3.1",
     "eslint": "^9.20.1",
+    "lint-staged": "^15.5.1",
     "simple-git-hooks": "^2.11.1",
     "taze": "^18.5.0",
     "typescript": "~5.7.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "simple-git-hooks"
+    ]
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged && pnpm typecheck"
