--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -2,7 +2,7 @@
   "name": "@proj-airi/factorio-agent",
   "type": "module",
   "version": "0.1.0",
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.10.0",
   "description": "An agent for Factorio written in TypeScript.",
   "author": "LemonNekoGH",
   "license": "MIT",
@@ -20,24 +20,24 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.36.0",
-    "@guiiai/logg": "^1.0.7",
-    "@xsai/generate-text": "^0.1.0-beta.5",
+    "@dotenvx/dotenvx": "^1.43.0",
+    "@guiiai/logg": "^1.0.10",
+    "@xsai/generate-text": "^0.2.0",
     "@xsai/providers": "^0.1.0-beta.5",
-    "execa": "^9.5.2",
+    "execa": "^9.5.3",
     "exponential-backoff": "^3.1.2",
     "factorio-rcon-api-client": "^2.0.4",
     "it-ws": "^6.1.5",
-    "neuri": "^0.0.22",
-    "zod": "^3.24.2",
-    "zod-to-json-schema": "^3.24.1"
+    "neuri": "^0.1.4",
+    "zod": "^3.24.4",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
-    "@types/node": "^22.13.4",
-    "tsx": "^4.19.2",
-    "unbuild": "^3.3.1",
-    "vite": "^6.1.0",
-    "vite-node": "^3.0.5",
-    "vitest": "^3.0.5"
+    "@types/node": "^22.15.17",
+    "tsx": "^4.19.4",
+    "unbuild": "^3.5.0",
+    "vite": "^6.3.5",
+    "vite-node": "^3.1.3",
+    "vitest": "^3.1.3"
   }
 }
