--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@antfu/eslint-config": "^4.13.0",
     "@antfu/ni": "^24.3.0",
     "eslint": "^9.26.0",
-    "lint-staged": "^15.5.2",
+    "lint-staged": "^16.0.0",
     "simple-git-hooks": "^2.13.0",
     "taze": "^19.1.0",
     "typescript": "~5.8.3"
@@ -36,7 +36,8 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
-      "simple-git-hooks"
+      "simple-git-hooks",
+      "unrs-resolver"
     ]
   },
   "simple-git-hooks": {
