--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "autorio.ts",
   "type": "module",
   "version": "1.0.0",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "description": "An automation mod for Factorio written in TypeScript.",
   "author": "LemonNekoGH",
   "license": "MIT",
@@ -25,10 +25,10 @@
     "typecheck": "pnpm -r --filter=./packages/* run typecheck"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.0",
-    "@antfu/ni": "^24.3.0",
-    "eslint": "^9.26.0",
-    "lint-staged": "^15.5.2",
+    "@antfu/eslint-config": "^4.13.1",
+    "@antfu/ni": "^24.4.0",
+    "eslint": "^9.27.0",
+    "lint-staged": "^16.0.0",
     "simple-git-hooks": "^2.13.0",
     "taze": "^19.1.0",
     "typescript": "~5.8.3"
@@ -36,7 +36,8 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
-      "simple-git-hooks"
+      "simple-git-hooks",
+      "unrs-resolver"
     ]
   },
   "simple-git-hooks": {
