--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "dev:packages": "pnpm -r --filter=./packages/* run dev",
     "lint": "eslint --cache .",
     "lint:fix": "eslint --cache --fix .",
-    "typecheck": "pnpm -r --filter=./packages/* run typecheck"
+    "typecheck": "pnpm -r --filter=./packages/* run typecheck",
+    "bootstrap": "node scripts/bootstrap.ts"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
     "@antfu/ni": "^25.0.0",
+    "@types/node": "24",
     "eslint": "^9.31.0",
+    "execa": "^9.6.0",
     "lint-staged": "^16.1.2",
     "simple-git-hooks": "^2.13.0",
     "taze": "^19.1.0",
