--- a/models/factorio-yolo-v0/pixi.toml
+++ b/models/factorio-yolo-v0/pixi.toml
@@ -15,3 +15,5 @@ python = "<3.13"
 [pypi-dependencies]
 ultralytics = ">=8.3.176, <9"
 onnx = ">=1.18.0, <2"
+ipython = ">=9.5.0, <10"
+ipykernel = ">=6.30.1, <7"
