docs(README.md): added banner

--- a/package.json
+++ b/package.json
@@ -45,8 +45,14 @@
       "@vscode/vsce-sign",
       "esbuild",
       "keytar",
+      "onnxruntime-node",
+      "protobufjs",
+      "sharp",
       "simple-git-hooks",
       "unrs-resolver"
+    ],
+    "ignoredBuiltDependencies": [
+      "vue-demi"
     ]
   },
   "simple-git-hooks": {
